--- a/AULA-JQUERY_AJAX/index.html
+++ b/AULA-JQUERY_AJAX/index.html
@@ -16,43 +16,45 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Consulta CEP</a>
-        
-          <div class="d-flex">
-            <input id="cep" class="form-control me-2" type="search" placeholder="Cep" aria-label="Search">
-            <button class="btn btn-outline-success" onclick='consultaCep()' >Buscar</button>
+      </div>
+    </nav>
+
+    <div class="container" style="margin-top: 50px;">
+      <div class="row">
+        <div class="col-md-8 offset-md-2 text-center">
+          <h2 class="mb-4">Consulta de Endereço por CEP</h2>
+          <div class="input-group mb-3">
+            <input id="cep" type="text" class="form-control" placeholder="Digite o CEP (apenas números)" aria-label="Recipient's username" aria-describedby="button-addon2">
+            <button class="btn btn-primary" type="button" id="button-addon2" onclick="consultaCep()">Buscar</button>
           </div>
         </div>
       </div>
-    </nav>
-     
- <div class="container" style="margin-top:20px">
-      <div class="row">
-         <h3>CEP</h3>
-      </div>
-      <div class="row">
-          <table class="table">
+
+      <div class="row" id="resultado" style="margin-top: 40px;">
+        <div class="col-md-8 offset-md-2">
+          <table class="table table-bordered">
             <tbody>
               <tr>
-                <td>Logradouro</td>
+                <td class="w-25"><strong>Logradouro</strong></td>
                 <td id="logradouro"></td>
               </tr>
               <tr>
-                <td>Bairro</td>
+                <td><strong>Bairro</strong></td>
                 <td id="bairro"></td>
               </tr>
               <tr>
-                <td>Localidade</td>
+                <td><strong>Localidade</strong></td>
                 <td id="localidade"></td>
               </tr>
               <tr>
-                <td>UF</td>
+                <td><strong>UF</strong></td>
                 <td id="uf"></td>
               </tr>
             </tbody>
-
           </table>
+        </div>
       </div>
- </div>
+    </div>
 
 </body>
 
